使用 Modernizer 检查代码